--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
       </div>
       <div class="guarantee-item">
         <i class="fas fa-sync-alt"></i>
-        <span>Sınırsız Revizyon</span>
+        <span>Benzeri yapılır</span>
       </div>
       <div class="guarantee-item">
         <i class="fas fa-lock"></i>
