--- a/index.html
+++ b/index.html
@@ -2138,7 +2138,7 @@
           <i class="fab fa-behance"></i>
           <div>
             <strong>Behance:</strong>
-            <a href="https://www.behance.net/amjadhammad" target="_blank">@amjadhammad</a>
+            <a href="https://www.behance.net/amjad_" target="_blank">@amjad_</a>
           </div>
         </div>
         <div class="info-item">
