--- a/index.html
+++ b/index.html
@@ -2842,21 +2842,21 @@
         </div>
         <h2>Logo Tasarımı</h2>
         <ul class="services-list">
-<li class="service-item" data-name="Basit Logo (Temel)" data-price="2800">
+<li class="service-item" data-name="Basit Logo (Temel)" data-price="">
 <span class="service-name">Basit Logo (Temel)</span>
-<span class="service-price">2,800 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Profesyonel Logo (3 seçenek)" data-price="4200">
+<li class="service-item" data-name="Profesyonel Logo (3 seçenek)" data-price="">
 <span class="service-name">Profesyonel Logo (3 seçenek)</span>
-<span class="service-price">4,200 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Kurumsal Kimlik (Logo + renkler + fontlar)" data-price="6400">
+<li class="service-item" data-name="Kurumsal Kimlik (Logo + renkler + fontlar)" data-price="">
 <span class="service-name">Kurumsal Kimlik (Logo + renkler + fontlar)</span>
-<span class="service-price">6,400 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Mevcut logoda değişiklik" data-price="2000">
+<li class="service-item" data-name="Mevcut logoda değişiklik" data-price="">
 <span class="service-name">Mevcut logoda değişiklik</span>
-<span class="service-price">2,000 TL</span>
+<span class="service-price"></span>
 </li>
         </ul>
       </div>
@@ -2867,21 +2867,21 @@
         </div>
         <h2>Ambalaj Tasarımı</h2>
         <ul class="services-list">
-<li class="service-item" data-name="Tek yüzey ambalaj tasarımı (1-2 yüz)" data-price="2000">
+<li class="service-item" data-name="Tek yüzey ambalaj tasarımı (1-2 yüz)" data-price="">
 <span class="service-name">Tek yüzey ambalaj tasarımı (1-2 yüz)</span>
-<span class="service-price">2,000 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Çok yüzeyli ambalaj tasarımı (1-5 yüz)" data-price="2800">
+<li class="service-item" data-name="Çok yüzeyli ambalaj tasarımı (1-5 yüz)" data-price="">
 <span class="service-name">Çok yüzeyli ambalaj tasarımı (1-5 yüz)</span>
-<span class="service-price">2,800 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Ürün etiketi tasarımı" data-price="800">
+<li class="service-item" data-name="Ürün etiketi tasarımı" data-price="">
 <span class="service-name">Ürün etiketi tasarımı</span>
-<span class="service-price">800 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Premium hediye kutusu tasarımı" data-price="5800">
+<li class="service-item" data-name="Premium hediye kutusu tasarımı" data-price="">
 <span class="service-name">Premium hediye kutusu tasarımı</span>
-<span class="service-price">5,800 TL</span>
+<span class="service-price"></span>
 </li>
         </ul>
       </div>
@@ -2892,25 +2892,25 @@
         </div>
         <h2>Video Kurgu & Montaj</h2>
         <ul class="services-list">
-<li class="service-item" data-name="Temel video montaj (saatlik)" data-price="4000">
+<li class="service-item" data-name="Temel video montaj (saatlik)" data-price="">
 <span class="service-name">Temel video montaj (saatlik)</span>
-<span class="service-price">4,000 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="After Effects animasyon (saatlik)" data-price="7500">
+<li class="service-item" data-name="After Effects animasyon (saatlik)" data-price="">
 <span class="service-name">After Effects animasyon (saatlik)</span>
-<span class="service-price">7,500 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Reklam videosu (30-60 saniye)" data-price="5800">
+<li class="service-item" data-name="Reklam videosu (30-60 saniye)" data-price="">
 <span class="service-name">Reklam videosu (30-60 saniye)</span>
-<span class="service-price">5,800 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Kapsamlı tanıtım videosu (2-3 dakika)" data-price="12000">
+<li class="service-item" data-name="Kapsamlı tanıtım videosu (2-3 dakika)" data-price="">
 <span class="service-name">Kapsamlı tanıtım videosu (2-3 dakika)</span>
-<span class="service-price">12,000 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="AI ile fotoğraftan video oluşturma (başına)" data-price="1000">
+<li class="service-item" data-name="AI ile fotoğraftan video oluşturma (başına)" data-price="">
 <span class="service-name">AI ile fotoğraftan video oluşturma (başına)</span>
-<span class="service-price">1,000 TL</span>
+<span class="service-price"></span>
 </li>
         </ul>
       </div>
@@ -2921,25 +2921,25 @@
         </div>
         <h2>Grafik Tasarım & Pazarlama</h2>
         <ul class="services-list">
-<li class="service-item" data-name="Sosyal medya posteri (tek)" data-price="280">
+<li class="service-item" data-name="Sosyal medya posteri (tek)" data-price="">
 <span class="service-name">Sosyal medya posteri (tek)</span>
-<span class="service-price">280 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="5'li sosyal medya posteri paketi" data-price="1200">
+<li class="service-item" data-name="5'li sosyal medya posteri paketi" data-price="">
 <span class="service-name">5'li sosyal medya posteri paketi</span>
-<span class="service-price">1,200 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="20'li sosyal medya posteri paketi" data-price="4000">
+<li class="service-item" data-name="20'li sosyal medya posteri paketi" data-price="">
 <span class="service-name">20'li sosyal medya posteri paketi</span>
-<span class="service-price">4,000 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Kartvizit tasarımı" data-price="1000">
+<li class="service-item" data-name="Kartvizit tasarımı" data-price="">
 <span class="service-name">Kartvizit tasarımı</span>
-<span class="service-price">1,000 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Broşür tasarımı (tek yüz)" data-price="2000">
+<li class="service-item" data-name="Broşür tasarımı (tek yüz)" data-price="">
 <span class="service-name">Broşür tasarımı (tek yüz)</span>
-<span class="service-price">2,000 TL</span>
+<span class="service-price"></span>
 </li>
         </ul>
       </div>
@@ -2950,29 +2950,29 @@
         </div>
         <h2>Fotoğraf Düzenleme</h2>
         <ul class="services-list">
-<li class="service-item" data-name="Temel renk düzeltme (fotoğraf başı)" data-price="200">
+<li class="service-item" data-name="Temel renk düzeltme (fotoğraf başı)" data-price="">
 <span class="service-name">Temel renk düzeltme (fotoğraf başı)</span>
-<span class="service-price">200 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Arka plan değiştirme (fotoğraf başı)" data-price="400">
+<li class="service-item" data-name="Arka plan değiştirme (fotoğraf başı)" data-price="">
 <span class="service-name">Arka plan değiştirme (fotoğraf başı)</span>
-<span class="service-price">400 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Portre düzeltme (cilt, göz, vs.)" data-price="600">
+<li class="service-item" data-name="Portre düzeltme (cilt, göz, vs.)" data-price="">
 <span class="service-name">Portre düzeltme (cilt, göz, vs.)</span>
-<span class="service-price">600 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Ürün fotoğrafı düzenleme" data-price="350">
+<li class="service-item" data-name="Ürün fotoğrafı düzenleme" data-price="">
 <span class="service-name">Ürün fotoğrafı düzenleme</span>
-<span class="service-price">350 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="10 fotoğraflik paket" data-price="2800">
+<li class="service-item" data-name="10 fotoğraflik paket" data-price="">
 <span class="service-name">10 fotoğraflık paket</span>
-<span class="service-price">2,800 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="20 fotoğraflik paket" data-price="5000">
+<li class="service-item" data-name="20 fotoğraflik paket" data-price="">
 <span class="service-name">20 fotoğraflık paket</span>
-<span class="service-price">5,000 TL</span>
+<span class="service-price"></span>
 </li>
         </ul>
       </div>
@@ -2983,21 +2983,21 @@
         </div>
         <h2>Diğer Hizmetler</h2>
         <ul class="services-list">
-<li class="service-item" data-name="Web site arayüz tasarımı" data-price="8000">
+<li class="service-item" data-name="Web site arayüz tasarımı" data-price="">
 <span class="service-name">Web site arayüz tasarımı</span>
-<span class="service-price">8,000 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Sosyal medya kapak fotoğrafı" data-price="550">
+<li class="service-item" data-name="Sosyal medya kapak fotoğrafı" data-price="">
 <span class="service-name">Sosyal medya kapak fotoğrafı</span>
-<span class="service-price">550 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Mobil uygulama arayüzü" data-price="12000">
+<li class="service-item" data-name="Mobil uygulama arayüzü" data-price="">
 <span class="service-name">Mobil uygulama arayüzü</span>
-<span class="service-price">12,000 TL</span>
+<span class="service-price"></span>
 </li>
-<li class="service-item" data-name="Karikatür çizimi" data-price="1000">
+<li class="service-item" data-name="Karikatür çizimi" data-price="">
 <span class="service-name">Karikatür çizimi</span>
-<span class="service-price">1,000 TL</span>
+<span class="service-price"></span>
 </li>
         </ul>
       </div>
@@ -3329,34 +3329,34 @@
       
       // Servis fiyat listesi
       const services = [
-        { name: "Basit Logo (Temel)", price: 2800 },
-        { name: "Profesyonel Logo (3 seçenek)", price: 4200 },
-        { name: "Kurumsal Kimlik (Logo + renkler + fontlar)", price: 6400 },
-        { name: "Mevcut logoda değişiklik", price: 2000 },
-        { name: "Tek yüzey ambalaj tasarımı (1-2 yüz)", price: 2000 },
-        { name: "Çok yüzeyli ambalaj tasarımı (1-5 yüz)", price: 2800 },
-        { name: "Ürün etiketi tasarımı", price: 800 },
-        { name: "Premium hediye kutusu tasarımı", price: 5800 },
-        { name: "Temel video montaj (saatlik)", price: 4000 },
-        { name: "After Effects animasyon (saatlik)", price: 7500 },
-        { name: "Reklam videosu (30-60 saniye)", price: 5800 },
-        { name: "Kapsamlı tanıtım videosu (2-3 dakika)", price: 12000 },
-        { name: "AI ile fotoğraftan video oluşturma (başına)", price: 1000 },
-        { name: "Sosyal medya posteri (tek)", price: 280 },
-        { name: "5'li sosyal medya posteri paketi", price: 1200 },
-        { name: "20'li sosyal medya posteri paketi", price: 4000 },
-        { name: "Kartvizit tasarımı", price: 1000 },
-        { name: "Broşür tasarımı (tek yüz)", price: 2000 },
-        { name: "Temel renk düzeltme (fotoğraf başı)", price: 200 },
-        { name: "Arka plan değiştirme (fotoğraf başı)", price: 400 },
-        { name: "Portre düzeltme (cilt, göz, vs.)", price: 600 },
-        { name: "Ürün fotoğrafı düzenleme", price: 350 },
-        { name: "10 fotoğraflik paket", price: 2800 },
-        { name: "20 fotoğraflik paket", price: 5000 },
-        { name: "Web site arayüz tasarımı", price: 8000 },
-        { name: "Sosyal medya kapak fotoğrafı", price: 550 },
-        { name: "Mobil uygulama arayüzü", price: 12000 },
-        { name: "Karikatür çizimi", price: 1000 }
+        { name: "Basit Logo (Temel)", price: 1 },
+        { name: "Profesyonel Logo (3 seçenek)", price: 1 },
+        { name: "Kurumsal Kimlik (Logo + renkler + fontlar)", price: 1 },
+        { name: "Mevcut logoda değişiklik", price: 1 },
+        { name: "Tek yüzey ambalaj tasarımı (1-2 yüz)", price: 1 },
+        { name: "Çok yüzeyli ambalaj tasarımı (1-5 yüz)", price: 1 },
+        { name: "Ürün etiketi tasarımı", price: 1 },
+        { name: "Premium hediye kutusu tasarımı", price: 1 },
+        { name: "Temel video montaj (saatlik)", price: 1 },
+        { name: "After Effects animasyon (saatlik)", price: 1 },
+        { name: "Reklam videosu (30-60 saniye)", price: 1 },
+        { name: "Kapsamlı tanıtım videosu (2-3 dakika)", price: 1 },
+        { name: "AI ile fotoğraftan video oluşturma (başına)", price: 1 },
+        { name: "Sosyal medya posteri (tek)", price: 1 },
+        { name: "5'li sosyal medya posteri paketi", price: 1 },
+        { name: "20'li sosyal medya posteri paketi", price: 1 },
+        { name: "Kartvizit tasarımı", price: 1 },
+        { name: "Broşür tasarımı (tek yüz)", price: 1 },
+        { name: "Temel renk düzeltme (fotoğraf başı)", price: 1 },
+        { name: "Arka plan değiştirme (fotoğraf başı)", price: 1 },
+        { name: "Portre düzeltme (cilt, göz, vs.)", price: 1 },
+        { name: "Ürün fotoğrafı düzenleme", price: 1 },
+        { name: "10 fotoğraflik paket", price: 1 },
+        { name: "20 fotoğraflik paket", price: 1 },
+        { name: "Web site arayüz tasarımı", price: 1 },
+        { name: "Sosyal medya kapak fotoğrafı", price: 1 },
+        { name: "Mobil uygulama arayüzü", price: 1 },
+        { name: "Karikatür çizimi", price: 1 }
       ];
       
       // Servis seçeneklerini oluştur
